AUGREL/src/objects/Service_Result__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting stores the mapping for Service Result that is been send across to TIBCO in order to create Service request in Star</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Result__c</fullName>
        <label>Service Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Service Result Map</label>
</CustomObject>